--- a/java_programming/.gitignore
+++ b/java_programming/.gitignore
@@ -208,3 +208,5 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,intellij,java,visualstudiocode,windows
+
+.idea
